fixed minor spacing issue

--- a/src/components/contact/contact.css
+++ b/src/components/contact/contact.css
@@ -16,7 +16,7 @@
 
 .contact__header {
     font-weight: 100;
-    margin: 4rem 0;
+    margin: 4rem 0 2rem;
 }
 
 .contact__form {
