--- a/src/components/projects/projects.css
+++ b/src/components/projects/projects.css
@@ -15,7 +15,7 @@
 
 .projects__header {
     font-weight: 100;
-    margin: 4rem 0 15vh;
+    margin: 4rem 0 10vh;
 }
 
 .projects__tabs-container {
