--- a/src/components/skills/skills.css
+++ b/src/components/skills/skills.css
@@ -16,7 +16,7 @@
 
 .skills__header {
     font-weight: 100;
-    margin: 4rem 0 15vh;
+    margin: 4rem 0 10vh;
 }
 
 .skills__content {
